2012-03-21 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Fixed bug when resetting the component (reinitialized object list), resolves #35098
	* Released to TER as version 1.2.1

2012-02-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Changed static TS to use reference to lib.parseFunc_RTE, resolves #34184

2012-02-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.2.0

2012-01-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Replaced reference to parent object with new, general member variable, resolves #33051

2011-12-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>

    * Added a RECORDS element type, resolves #32430
    * Updated the manual, added an "Installation" chapter, resolves #13483

2011-12-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Improved the PAGE_STATUS function, resolves #32327
	* Corrected spelling mistake in file of class tx_templatedisplay_ajax, resolves #32335
	* Added missing documentation about EMPTY structure, resolves #32336

2011-08-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Image resource type should not override configured "file" property, resolves #29302

2011-08-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.1.0

2011-07-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Image type should not override configured "file" property, resolves #28520

2010-09-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* First public release