@@ -1,3 +1,7 @@
+2012-04-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Dropped usage of tx_tesseract_utilities::wrapMessage(), resolves #35602
+
 2012-03-21 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Fixed bug when resetting the component (reinitialized object list), resolves #35098
